--- a/DiskSim/DiskSim.vcxproj
+++ b/DiskSim/DiskSim.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="QC_LDPC_Code.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FileName.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
